tests/fail/elaboration/item-cycle.fathom
//~ ignore = true

def first = second;
def second = third;
def third = first;
